ingress/ing_aqua.yaml
apiVersion: v1
kind: Service
metadata:
  name: aqua-svc
spec:
  selector:
    app: aqua
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aqua-ingress
spec:
  rules:
  - host: aqua.k8slab.playpit.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: aqua-svc
            port:
              number: 80
