ingress/k8sv1.19.yaml
apiVersion: networking.k8s.io/v1beta
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: foo-svc
          servicePort: 80
